# agent-narrator-for-windows

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
agent_narrator/: __init__.py  cli.py  multiplexer.py  parser.py  sources.py  summarizer.py  tts.py  watcher.py
