[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-narrator"
version = "0.2.0"
description = "Hear your Claude Code agent work - terminal-native, cross-platform, BYO-key narration over TTS."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Anmol Saksena" }]
keywords = ["claude-code", "agents", "tts", "narration", "cli"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: User Interfaces",
]
dependencies = [
    "openai>=1.40",
    "google-genai>=1.0",
    "edge-tts>=7.0",
    "pyttsx3>=2.90",
    "python-dotenv>=1.0",
]

[project.urls]
Repository = "https://github.com/anmolsaksena/agent-narrator"

[project.scripts]
agent-narrator = "agent_narrator.cli:main"

[tool.setuptools.packages.find]
include = ["agent_narrator*"]
